--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,9 +3,16 @@ body {
 }
 
 .arrows {
-    width: 100px;
-    height: 100px;
+    width: 256px;
+    height: 256px;
     background-color: #0F0;
+}
+
+.arrowimg {
+	width: 128px;
+	height: 128px;
+	/* needed to remove extra padding from images */
+	float: left;
 }
 
 .button {
