--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -11,6 +11,7 @@ body {
 /* custom scrollbars */
 ::-webkit-scrollbar {
 	width: 5px;
+	
 	height: 5px;
 }
 
@@ -41,10 +42,18 @@ body {
 	text-align: center;
 }
 
-.ls {
-	font-size: 9px;
-	background-color: #FFFFFF;
+.line {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 800px;
 	height: 10px;
 	margin: 0 auto;
+}
+
+.line div {
+	width: 40px;
+	height: 10px;
+	border: 1px solid #FFFFFF;
+	background-color: #FFFFFF;
 }
