--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0 auto;
+}
+
 body {
 	background-color: #00AABB;
     display: flex;
@@ -48,7 +52,6 @@ body {
 	align-items: center;
 	width: 800px;
 	height: 10px;
-	margin: 0 auto;
 }
 
 .line div {
