--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -15,7 +15,6 @@ body {
 /* custom scrollbars */
 ::-webkit-scrollbar {
 	width: 5px;
-	
 	height: 5px;
 }
 
@@ -34,7 +33,7 @@ body {
 .animation-wrapper {
     background-color: #2ecbdc;
 	width: 100%;
-	max-width: 910px;
+	max-width: 800px;
 	margin-left: 32px;
 	margin-right: 32px;
 }
@@ -50,12 +49,14 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 800px;
+	width: 100%;
+	max-width: 800px;
 	height: 10px;
 }
 
 .line div {
-	width: 40px;
+	width: 5%;
+	max-width: 40px;
 	height: 10px;
 	border: 1px solid #FFFFFF;
 	background-color: #FFFFFF;
