--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -33,6 +33,7 @@ body {
 
 .animation-wrapper {
     background-color: #2ecbdc;
+    position: relative;
 	width: 100%;
 	max-width: 910px;
 	margin-left: 32px;
@@ -44,6 +45,14 @@ body {
 	font-family: 'Space Mono', monospace;
 	font-size: 100px;
 	text-align: center;
+
+	/* makes name unhighlightable */
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
 }
 
 .line {
@@ -64,4 +73,56 @@ body {
 .hidden {
 	visibility: hidden;
 	background-color: #2ecbdc;
+}
+
+.controls {
+    position: absolute;
+    bottom: 0;
+}
+
+.button {
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	background-color: #008899;
+}
+
+.button:hover {
+	background-color: #006677;
+}
+
+/* custom sliders */
+.slider {
+	/* Override default CSS styles */
+	-webkit-appearance: none;
+	appearance: none;
+	width: 100%;
+	height: 32px;
+	border: 1px solid #000000;
+	background-color: #2ecbdc;
+}
+
+.slider::-webkit-slider-thumb {
+	/* Override default look */
+	-webkit-appearance: none;
+  	appearance: none;
+  	width: 32px;
+  	height: 32px;
+	background: #008899;
+	cursor: pointer;
+}
+
+.slider::-webkit-slider-thumb:hover {
+	background: #006677;
+}
+
+.slider::-moz-range-thumb {
+  width: 32px;
+  height: 32px;
+  background: #008899;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb:hover {
+	background: #006677;
 }
