--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,13 +2,21 @@
     margin: 0 auto;
 }
 
+:root {
+	/* colors */
+	--bg-color: #2ecbdc;
+	--blue1: #00AABB;
+	--blue2: #008899;
+	--blue3: #006677;
+}
+
 body {
-	background-color: #00AABB;
+	background-color: var(--bg-color);
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
 }
 
@@ -19,24 +27,22 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-	background: #00AABB;
+	background: var(--blue1);
 }
 
 ::-webkit-scrollbar-thumb {
-	background: #008899;
+	background: var(--blue2);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-	background: #006677;
+	background: var(--blue3);
 }
 
 .animation-wrapper {
-    background-color: #2ecbdc;
+    background-color: var(--blue1);
     position: relative;
 	width: 100%;
 	max-width: 800px;
-	margin-left: 32px;
-	margin-right: 32px;
 }
 
 .name {
@@ -72,34 +78,40 @@ body {
 
 .hidden {
 	visibility: hidden;
-	background-color: #2ecbdc;
 }
 
 .controls {
+	display: flex;
     position: absolute;
     bottom: 0;
+    width: inherit;
+    max-width: 800px;
+    justify-content: center;
+	background-color: var(--bg-color);
+	padding: 5px;
 }
 
 .button {
 	display: inline-block;
-	width: 30px;
-	height: 30px;
-	background-color: #008899;
+	width: 32px;
+	height: 32px;
+	background-color: var(--blue2);
+	margin-right: 5px;
 }
 
 .button:hover {
-	background-color: #006677;
+	background-color: var(--blue3);
 }
 
 /* custom sliders */
 .slider {
+	display: inline-block;
 	/* Override default CSS styles */
 	-webkit-appearance: none;
 	appearance: none;
 	width: 100%;
 	height: 32px;
-	border: 1px solid #000000;
-	background-color: #2ecbdc;
+	background-color: var(--blue1);
 }
 
 .slider::-webkit-slider-thumb {
@@ -108,21 +120,21 @@ body {
   	appearance: none;
   	width: 32px;
   	height: 32px;
-	background: #008899;
+	background: var(--blue2);
 	cursor: pointer;
 }
 
 .slider::-webkit-slider-thumb:hover {
-	background: #006677;
+	background: var(--blue3);
 }
 
 .slider::-moz-range-thumb {
   width: 32px;
   height: 32px;
-  background: #008899;
+  background: var(--blue2);
   cursor: pointer;
 }
 
 .slider::-moz-range-thumb:hover {
-	background: #006677;
+	background: var(--blue3);
 }
