--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -39,7 +39,8 @@ body {
 }
 
 .animation-wrapper {
-    background-color: var(--blue1);
+    background-color: var(--bg-color);
+    /*background-color: var(--blue1);*/
     position: relative;
 	width: 100%;
 	max-width: 800px;
