--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -13,11 +13,10 @@
 body {
 	background-color: var(--bg-color);
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: center;  /* horizontal alignment */
     position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 300vh;
 }
 
 /* custom scrollbars */
@@ -38,12 +37,25 @@ body {
 	background: var(--blue3);
 }
 
+.initial-screen {
+	/*background-color: #AAAAAA;*/
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+}
+
+.flashy {
+	position: relative;
+	width: 100%;
+	max-width: 800px;
+}
+
 .animation-wrapper {
     background-color: var(--bg-color);
     /*background-color: var(--blue1);*/
     position: relative;
-	width: 100%;
-	max-width: 800px;
+	width: inherit;
 }
 
 .name {
@@ -81,15 +93,14 @@ body {
 	visibility: hidden;
 }
 
-.controls {
+.controls-wrapper {
 	display: flex;
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: inherit;
-    max-width: 800px;
     justify-content: center;
 	background-color: var(--bg-color);
-	padding: 5px;
+	padding-top: 10px;
 }
 
 .button {
