--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,6 +5,7 @@
 :root {
 	/* colors */
 	--bg-color: #2ecbdc;
+	--bg-color-dark: #15223c;
 	--blue1: #00AABB;
 	--blue2: #008899;
 	--blue3: #006677;
@@ -14,7 +15,7 @@ body {
 	background-color: var(--bg-color);
     display: flex;
     justify-content: center;  /* horizontal alignment */
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 300vh;
 }
@@ -43,6 +44,8 @@ body {
 	height: 100vh;
 	display: flex;
 	align-items: center;
+	position: absolute;
+	top: 0;
 }
 
 .flashy {
@@ -150,4 +153,29 @@ body {
 
 .slider::-moz-range-thumb:hover {
 	background: var(--blue3);
+}
+
+.content {
+	background-color: var(--bg-color-dark);
+	width: 100%;
+	height: 100vh;
+	position: absolute;
+	top: 100vh;
+}
+
+.banner {
+	width: 100%;
+	background-color: #AAAAAA;
+	position: -webkit-sticky; /* Safari */
+	position: sticky;
+	top: 0;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.icon {
+	width: 128px;
+	height: 128px;
 }
