--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -18,7 +18,7 @@
 }
 
 body {
-	background-color: var(--bg-color);
+	background-color: var(--offwhite);
     display: flex;
     justify-content: center;  /* horizontal alignment */
     position: relative;
@@ -32,6 +32,7 @@ body {
 	height: 0px;
 }
 
+/*
 ::-webkit-scrollbar-track {
 	background: var(--blue1);
 }
@@ -43,6 +44,7 @@ body {
 ::-webkit-scrollbar-thumb:hover {
 	background: var(--blue3);
 }
+*/
 
 .initial-screen {
 	width: 100%;
@@ -60,14 +62,12 @@ body {
 }
 
 .animation-wrapper {
-    background-color: var(--bg-color);
-    /*background-color: var(--blue1);*/
     position: relative;
 	width: inherit;
 }
 
 .name {
-	color: #FFFFFF;
+	color: var(--white);
 	font-family: 'Space Mono', monospace;
 	font-size: 100px;
 	text-align: center;
@@ -94,7 +94,7 @@ body {
 	width: 5%;
 	max-width: 40px;
 	height: 10px;
-	background-color: #FFFFFF;
+	background-color: var(--white);
 }
 
 .hidden {
@@ -107,7 +107,6 @@ body {
     bottom: 0;
     width: inherit;
     justify-content: center;
-	background-color: var(--bg-color);
 	padding-top: 10px;
 }
 
@@ -115,12 +114,12 @@ body {
 	display: inline-block;
 	width: 32px;
 	height: 32px;
-	background-color: var(--blue2);
+	background-color: var(--lime);
 	margin-right: 5px;
 }
 
 .button:hover {
-	background-color: var(--blue3);
+	background-color: var(--purple);
 }
 
 /* custom sliders */
@@ -131,7 +130,7 @@ body {
 	appearance: none;
 	width: 100%;
 	height: 32px;
-	background-color: var(--blue1);
+	background-color: var(--white);
 }
 
 .slider::-webkit-slider-thumb {
@@ -140,23 +139,23 @@ body {
   	appearance: none;
   	width: 32px;
   	height: 32px;
-	background: var(--blue2);
+	background: var(--lime);
 	cursor: pointer;
 }
 
 .slider::-webkit-slider-thumb:hover {
-	background: var(--blue3);
+	background: var(--purple);
 }
 
 .slider::-moz-range-thumb {
   width: 32px;
   height: 32px;
-  background: var(--blue2);
+  background: var(--lime);
   cursor: pointer;
 }
 
 .slider::-moz-range-thumb:hover {
-	background: var(--blue3);
+	background: var(--purple);
 }
 
 .scroll-animation {
@@ -165,12 +164,6 @@ body {
 	position: absolute;
 	top: 100vh;
 	background-color: var(--offwhite);
-}
-
-polygon {
-	fill: lime;
-	stroke: purple;
-	stroke-width: 1;
 }
 
 /*
