--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,5 @@
 * {
-    margin: 0 auto;
+	margin: 0 auto;
 }
 
 :root {
@@ -19,11 +19,11 @@
 
 body {
 	background-color: var(--offwhite);
-    display: flex;
-    justify-content: center;  /* horizontal alignment */
-    position: relative;
-    width: 100%;
-    height: 300vh;
+	display: flex;
+	justify-content: center;  /* horizontal alignment */
+	position: relative;
+	width: 100%;
+	height: 300vh;
 }
 
 /* custom scrollbars */
@@ -62,7 +62,7 @@ body {
 }
 
 .animation-wrapper {
-    position: relative;
+	position: relative;
 	width: inherit;
 }
 
@@ -74,11 +74,11 @@ body {
 
 	/* makes name unhighlightable */
 	-webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -khtml-user-select: none; /* Konqueror HTML */
-    -moz-user-select: none; /* Old versions of Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Old versions of Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
 }
 
 .line {
@@ -103,10 +103,10 @@ body {
 
 .controls-wrapper {
 	display: flex;
-    position: relative;
-    bottom: 0;
-    width: inherit;
-    justify-content: center;
+	position: relative;
+	bottom: 0;
+	width: inherit;
+	justify-content: center;
 	padding-top: 10px;
 }
 
@@ -136,9 +136,9 @@ body {
 .slider::-webkit-slider-thumb {
 	/* Override default look */
 	-webkit-appearance: none;
-  	appearance: none;
-  	width: 32px;
-  	height: 32px;
+	appearance: none;
+	width: 32px;
+	height: 32px;
 	background: var(--lime);
 	cursor: pointer;
 }
@@ -148,14 +148,28 @@ body {
 }
 
 .slider::-moz-range-thumb {
-  width: 32px;
-  height: 32px;
-  background: var(--lime);
-  cursor: pointer;
+	width: 32px;
+	height: 32px;
+	background: var(--lime);
+	cursor: pointer;
 }
 
 .slider::-moz-range-thumb:hover {
 	background: var(--purple);
+}
+
+.triangle-down {
+	width: 0px;
+	height: 0px;
+	border-left: 20px solid transparent;
+	border-right: 20px solid transparent;
+	border-top: 10px solid var(--white);
+	margin-bottom: 10px;
+
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%, 0);
+	bottom: 0;
 }
 
 .scroll-animation {
