--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -23,7 +23,7 @@ body {
 	justify-content: center;  /* horizontal alignment */
 	position: relative;
 	width: 100%;
-	height: 300vh;
+	/*height: 300vh;*/
 }
 
 /* custom scrollbars */
