--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -23,32 +23,31 @@ body {
 	justify-content: center;  /* horizontal alignment */
 	position: relative;
 	width: 100%;
-	/*height: 300vh;*/
+	height: 300vh;
 }
 
 /* custom scrollbars */
 ::-webkit-scrollbar {
 	width: 0px;
-	height: 0px;
+	height: 5px;
 }
 
-/*
 ::-webkit-scrollbar-track {
-	background: var(--blue1);
+	background: var(--offwhite);
 }
 
 ::-webkit-scrollbar-thumb {
-	background: var(--blue2);
+	background: var(--grey);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-	background: var(--blue3);
+	background: var(--grey);
 }
-*/
 
 .initial-screen {
-	width: 100%;
+	width: 900px;
 	height: 100vh;
+	background-color: var(--white);
 	display: flex;
 	align-items: center;
 	position: absolute;
@@ -67,7 +66,7 @@ body {
 }
 
 .name {
-	color: var(--white);
+	color: var(--grey);
 	font-family: 'Space Mono', monospace;
 	font-size: 100px;
 	text-align: center;
@@ -86,7 +85,6 @@ body {
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	max-width: 800px;
 	height: 10px;
 }
 
@@ -94,7 +92,7 @@ body {
 	width: 5%;
 	max-width: 40px;
 	height: 10px;
-	background-color: var(--white);
+	background-color: var(--grey);
 }
 
 .hidden {
@@ -173,11 +171,12 @@ body {
 }
 
 .scroll-animation {
-	width: 100%;
+	width: 900px;
 	height: 100vh;
 	position: absolute;
-	top: 100vh;
+	top: 0;
 	background-color: var(--offwhite);
+	opacity: 0.3;
 }
 
 /*
