--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -23,7 +23,7 @@ body {
 	justify-content: center;  /* horizontal alignment */
 	position: relative;
 	width: 100%;
-	height: 300vh;
+	height: 200vh;
 }
 
 /* custom scrollbars */
@@ -50,7 +50,7 @@ body {
 	background-color: var(--white);
 	display: flex;
 	align-items: center;
-	position: absolute;
+	position: fixed;
 	top: 0;
 }
 
@@ -161,7 +161,7 @@ body {
 	height: 0px;
 	border-left: 20px solid transparent;
 	border-right: 20px solid transparent;
-	border-top: 10px solid var(--white);
+	border-top: 10px solid var(--grey);
 	margin-bottom: 30px;
 
 	position: absolute;
@@ -173,7 +173,7 @@ body {
 .scroll-animation {
 	width: 900px;
 	height: 100vh;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	background-color: var(--offwhite);
 	opacity: 0.3;
