--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -178,6 +178,19 @@ body {
 	top: 0;
 }
 
+.resize-cover:after {
+	content: '';
+	position: fixed;
+	z-index: 999;
+	top: 0;
+	left: 0;
+	opacity: 1;
+	pointer-events: none;
+	background: var(--lime);
+	width: 100%;
+	height: 100%;
+}
+
 /*
 .content {
 	background-color: var(--bg-color-dark);
